# harness-engineering

./: .gitignore  README.md  README.zh-CN.md  WORKFLOW.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
scripts/: symphony-service.sh
src/symphony/: __init__.py  agent.py  cli.py  errors.py  http_server.py  logging_utils.py  models.py  orchestrator.py  template.py  tracker.py  workflow.py  workspace.py
tests/: test_http_server.py  test_orchestrator.py  test_tracker.py  test_workflow.py  test_workspace.py
